# tap-onsen

./: .env.example  .gitignore  CLAUDE.md  DB.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
config/: modes.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  hotkey.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  context.rs  mod.rs  prompt.rs  streaming.rs
src-tauri/src/commands/: ai.rs  audio.rs  db.rs  fs.rs  mod.rs  paste.rs
src-tauri/src/config/: modes.rs
src-tauri/src/db/: mod.rs  repository.rs  schema.rs
src-tauri/src/voice/: format.rs  macos_speech.rs  mod.rs  pipeline.rs  whisper_api.rs
src/components/: ActionButtons.tsx  History.tsx  ModeSelector.tsx  RecordButton.tsx  TextArea.tsx
src/hooks/: useAIProcess.ts  usePushToTalk.ts  useVoiceInput.ts
src/lib/: ipc.ts
src/types/: ai.ts  db.ts  index.ts  mode.ts  voice.ts
