[package]
name = "tap-onsen"
version = "0.1.0"
description = "Voice Input App for macOS"
authors = ["yugo-ibuki"]
edition = "2021"

[lib]
name = "tap_onsen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
async-trait = "0.1"
futures = "0.3"
hound = "3.5"
cpal = "0.15"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"
objc2-speech = "0.3"
